--- a/app/frontend/organisms/Authentication/Authentication.css
+++ b/app/frontend/organisms/Authentication/Authentication.css
@@ -19,6 +19,10 @@
       margin: 0;
     }
 
+    fieldset {
+      display: contents;
+    }
+
     h2 {
       font-size: var(--font-size-huge);
       line-height: var(--line-height-huge);
