--- a/app/frontend/pages/Admin/Festival/Activities/ActivityDetails/ActivityDetails.css
+++ b/app/frontend/pages/Admin/Festival/Activities/ActivityDetails/ActivityDetails.css
@@ -138,6 +138,7 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-flow: row dense;
+  align-items: start;
 
   &__meta {
     display: grid;
@@ -154,7 +155,7 @@
 
   @media (width > 768px) {
     grid-template-columns: 1fr 16rem;
-    gap: var(--large);
+    gap: var(--medium) var(--huge);
 
     h1 {
       grid-column: 1 / -1;
@@ -162,6 +163,91 @@
 
     &__meta {
       grid-column: 2;
+      padding-top: calc(var(--medium) * 2 + var(--line-height-large));
+    }
+  }
+}
+
+.session__participant {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: var(--medium);
+  align-items: center;
+  padding: var(--small);
+  border: var(--border-width-standard) solid var(--border-subtle);
+  border-radius: var(--border-radius-standard);
+  background: var(--background-subtle);
+
+  .icon {
+    display: block;
+    color: var(--neutral6);
+    cursor: grab;
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  &__name {
+    font-size: var(--font-size-legible);
+  }
+
+  &-wrapper {
+    padding-bottom: var(--small);
+  }
+
+  &[data-dragging] {
+    opacity: 0.25;
+
+  }
+
+  &[data-drag-overlay] {
+    z-index: 1;
+    box-shadow: var(--shadow-4);
+
+    .icon {
+      cursor: grabbing;
+    }
+  }
+
+  &[data-from-waitlist] {
+    outline: var(--border-width-thick) dashed var(--accent9);
+    outline-offset: -1px;
+  }
+
+  &-lists {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: var(--large);
+
+    h2 {
+      display: flex;
+      justify-content: space-between;
+      margin: var(--medium) 0;
+      color: var(--text-subtle);
+      font-weight: var(--font-weight-normal);
+      font-size: var(--font-size-large);
+      line-height: var(--line-height-large);
+
+      small {
+        font-weight: var(--font-weight-medium);
+        font-size: 100%;
+
+      }
+    }
+
+    [data-over-full] h2 small {
+      color: var(--text-error);
+    }
+
+    [data-over] {
+      outline: var(--border-width-thick) solid var(--focus);
+    }
+
+    section {
+      margin: 0 calc(var(--small) * -1);
+      padding: 0 var(--small);
+      border-radius: var(--border-radius-standard);
     }
   }
 }
