general registration UI

--- a/app/frontend/pages/Public/Registration/WorkshopSelection/WorkshopSelection.css
+++ b/app/frontend/pages/Public/Registration/WorkshopSelection/WorkshopSelection.css
@@ -189,6 +189,13 @@
           stroke: none;
         }
       }
+
+      .icon {
+        position: absolute;
+        inset: -0.25rem;
+        width: 2rem;
+        height: 2rem;
+      }
     }
 
     input:checked ~ .checkbox__burst {
