--- a/app/frontend/pages/Admin/People/Person/Person.css
+++ b/app/frontend/pages/Admin/People/Person/Person.css
@@ -119,4 +119,92 @@
       }
     }
   }
+
+  .registration__payments {
+    .add-voucher {
+      display: flex;
+      flex-direction: column;
+      gap: var(--medium);
+      padding: var(--medium);
+      border: var(--border-width-standard) solid var(--border-subtle);
+      border-radius: var(--border-radius-standard);
+      background: var(--background-subtle);
+
+      h3 {
+        margin: 0;
+      }
+
+      .labelled {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        align-items: center;
+
+        &__field {
+          order: -1;
+
+          .input {
+            width: 4rem;
+          }
+        }
+
+        label {
+          text-transform: lowercase;
+        }
+      }
+    }
+
+    @media (width > 768px) {
+      display: grid;
+      grid-template-columns: 1fr 16rem;
+      grid-auto-flow: row dense;
+      gap: var(--large);
+
+      aside {
+        grid-column: 2;
+        padding: var(--medium) 0;
+      }
+    }
+  }
+}
+
+.payments-table {
+  width: 100%;
+  margin: var(--medium) 0;
+  border-spacing: 0;
+  border-collapse: collapse;
+  font-size: var(--font-size-legible);
+  line-height: var(--line-height-legible);
+
+  td, th {
+    vertical-align: top;
+    padding: var(--small) var(--medium);
+    border-top: var(--border-width-standard) solid var(--border-subtle);
+    font-weight: var(--font-weight-normal);
+    text-align: left;
+
+    &:last-child {
+      text-align: right;
+    }
+
+    strong {
+      font-weight: var(--font-weight-medium);
+
+      + div {
+        color: var(--text-subtle);
+      }
+    }
+  }
+
+  tr:last-child {
+    td, th {
+      border-top: var(--border-width-standard) solid var(--text);
+      border-bottom: var(--border-width-standard) solid var(--text);
+    }
+  }
+
+  tfoot {
+    td, th {
+      font-weight: var(--font-weight-medium);
+    }
+  }
 }
