--- a/app/frontend/pages/Public/Registration/Payment/Payment.css
+++ b/app/frontend/pages/Public/Registration/Payment/Payment.css
@@ -21,6 +21,13 @@
     }
   }
 
+  &__general {
+    .note {
+      margin-top: var(--huge);
+      color: var(--text-subtle);
+    }
+  }
+
   .registration__cart {
     dl {
       display: grid;
@@ -70,6 +77,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: var(--large);
+    margin-bottom: var(--large);
   }
 
   .payment-method {
@@ -108,6 +116,21 @@
     &[aria-selected] {
       border-color: var(--border-element-accent);
       background: var(--background-element-accent);
+    }
+  }
+
+  .stripe-checkout {
+    &__error {
+      display: grid;
+      grid-template-columns: var(--icon-size) 1fr;
+      gap: var(--medium);
+      margin-bottom: var(--large);
+      padding: var(--medium);
+      border: var(--border-width-standard) solid var(--border-error);
+      border-radius: var(--border-radius-standard);
+      background: var(--background-error);
+      color: var(--text-error);
+      line-height: var(--line-height-medium);
     }
   }
 
