--- a/app/frontend/pages/Admin/Allocations/Allocations.css
+++ b/app/frontend/pages/Admin/Allocations/Allocations.css
@@ -165,7 +165,6 @@
     border: var(--border-width-standard) solid var(--person-border);
     border-radius: var(--border-radius-standard);
     background: var(--background) linear-gradient(to bottom, var(--person-background), var(--person-background));
-    cursor: grab;
 
     &:not([data-dragging]) {
       transition: transform var(--timing-slow) var(--ease-standard);
@@ -191,6 +190,11 @@
     color: var(--white);
     font-weight: var(--font-weight-medium);
     text-align: center;
+    cursor: grab;
+
+    [data-dragging] & {
+      cursor: grabbing;
+    }
   }
 
   &__zone {
@@ -238,6 +242,63 @@
         font-weight: var(--font-weight-medium);
         font-size: var(--font-size-large);
       }
+    }
+  }
+
+  &__popup {
+    padding: var(--medium);
+    font-size: var(--font-size-small);
+
+    h4 {
+      margin: 0 0 var(--medium);
+    }
+
+    &__slots {
+      display: grid;
+      grid-template-columns: var(--icon-size) 3rem 1fr;
+      gap: var(--small) var(--medium);
+      align-items: center;
+    }
+
+    &__position {
+      width: var(--icon-size);
+      border-radius: var(--border-radius-round);
+      color: var(--red9);
+      font-weight: var(--font-weight-medium);
+      line-height: var(--icon-size);
+      text-align: center;
+
+      &[data-position="1"] {
+        background: var(--lime9);
+        color: var(--lime12);
+      }
+
+      &[data-position="2"] {
+        background: var(--yellow9);
+        color: var(--yellow12);
+      }
+
+      &[data-position="3"] {
+        background: var(--amber9);
+        color: var(--amber12);
+      }
+
+      &[data-position="4"] {
+        background: var(--amber9);
+        color: var(--amber12);
+      }
+    }
+
+    &__missed,
+    &__name {
+      overflow: hidden;
+      min-width: 0;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    &__missed {
+      color: var(--text-subtle);
     }
   }
 }
