send proper confirmation emails

--- a/app/views/participant_mailer/_session.html.erb
+++ b/app/views/participant_mailer/_session.html.erb
@@ -1,14 +1,14 @@
 <%
-  preferences = @registration.preferences.select { |p| p.session.starts_at == placement.session.starts_at }
-  preference = preferences.find { |p| p.session_id == placement.session_id }
+  preferences = @registration.preferences.select { |p| p.session.starts_at == session.starts_at }
+  preference = preferences.find { |p| p.session_id == session.id }
   waitlisted = preferences.select { |p| p.position < preference.position }.sort_by(&:position)
 %>
 
 <div style="margin: 0 0 1.5rem">
-  <div style="font-size: 1.125rem"><%= placement.session.activity.name %></div>
+  <div style="font-size: 1.125rem"><%= session.activity.name %></div>
   <div class="subtle">
-    <%= l placement.session.starts_at, format: :friendly %> – <%= l placement.session.ends_at, format: :short %> in
-    <%= placement.session.venue.room %>
+    <%= l session.starts_at, format: :friendly %> – <%= l session.ends_at, format: :short %> in
+    <%= session.venue.room %>
   </div>
   <% if waitlisted.any? -%>
     <p style="margin-top: 0.5rem">
