--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -375,6 +375,16 @@
       .cart .discount td:first-child {
         padding-left: 1.5rem;
       }
+
+      .left-pink-border {
+        padding-left: 1.5rem;
+        border-left: 2px solid #ea3e82;
+      }
+
+      .left-blue-border {
+        padding-left: 1.5rem;
+        border-left: 2px solid #2aa3c2;
+      }
     </style>
   </head>
   <body>
