--- a/app/frontend/styles/colors.css
+++ b/app/frontend/styles/colors.css
@@ -129,6 +129,7 @@
   --border-subtle-accent: var(--accent6);
   --border-element-accent: var(--accent7);
   --border-hover-accent: var(--accent8);
+  --border-active-accent: var(--accent9);
   --border-focus-accent: var(--accent9);
   --solid-accent: var(--accent9);
   --solid-hover-accent: var(--accent10);
