fix workshop confirmation email

--- a/app/views/participant_mailer/_cart.html.erb
+++ b/app/views/participant_mailer/_cart.html.erb
@@ -34,7 +34,7 @@
 <p>
   All prices are in New Zealand Dollars and include GST.
   You can pay this amount now by visiting
-  <%= link_to "your registration page", payment_url(@registration) %>.
+  <%= link_to "your registration page", payment_url %>.
 </p>
 <% if cart.paid > cart.total %>
   <p>If you are due a refund, we will be in touch to arrange this.</p>
