--- a/app/frontend/organisms/Header/UserPopup.css
+++ b/app/frontend/organisms/Header/UserPopup.css
@@ -34,6 +34,11 @@
     white-space: nowrap;
   }
 
+  &__actions {
+    margin: 0 calc(var(--small) * -1);
+    padding: 0;
+  }
+
   &__registration {
     display: grid;
     grid-template-rows: auto 1fr auto;
