--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   </head>
   <body>
-    <%= render partial: '/shared/filer' %>
+    <%= render partial: '/shared/filter' %>
     <%= yield %>
     <div id="root" />
   </body>
