separate manifest for the directory

--- a/app/views/layouts/directory.html.erb
+++ b/app/views/layouts/directory.html.erb
@@ -4,7 +4,7 @@
     <title>NZIF Directory</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/directory-manifest.json">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
