--- a/app/frontend/pages/Public/Teaching/Teaching.css
+++ b/app/frontend/pages/Public/Teaching/Teaching.css
@@ -4,6 +4,12 @@
     padding: 0 0 var(--huge);
   }
 
+  &__workshops {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
+    gap: var(--large);
+  }
+
   .programme__activity {
     color: inherit;
     text-decoration: none;
