submit feedback responses

--- a/app/frontend/pages/Public/Feedback/Feedback.css
+++ b/app/frontend/pages/Public/Feedback/Feedback.css
@@ -47,6 +47,10 @@
   padding: var(--huge) 0;
   font-size: var(--font-size-legible);
 
+  fieldset {
+    display: contents;
+  }
+
   label,
   textarea {
     display: block;
