--- a/app/frontend/entrypoints/application.css
+++ b/app/frontend/entrypoints/application.css
@@ -155,3 +155,16 @@ input[type="search"] {
     }
   }
 }
+
+body[data-env="development"]::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1000;
+  height: 1rem;
+  background-color: var(--yellow9);
+  background-image: repeating-linear-gradient(-45deg, transparent, transparent 10px, var(--yellow12) 10px, var(--yellow12) 20px);
+  background-size: auto auto;
+}
