--- a/app/frontend/directory/Directory.css
+++ b/app/frontend/directory/Directory.css
@@ -6,11 +6,13 @@
 
   .sessions {
     display: grid;
-    grid-template-columns: 16rem 8rem 8rem;
+    grid-template-columns: 2fr 1fr 1fr;
     gap: var(--medium);
     place-content: center;
     align-items: center;
     min-height: 100vh;
+    margin: 0 2em;
+    font-size: clamp(2rem, 5vw, 4rem);
 
     h2 {
       grid-column: 1;
@@ -18,7 +20,12 @@
       margin: 0;
       color: var(--text-subtle);
       font-weight: var(--font-weight-medium);
-      font-size: var(--font-size-large);
+      font-size: 0.5em;
+    }
+
+    .button {
+      justify-self: stretch;
+      width: auto;
     }
   }
 
@@ -104,9 +111,9 @@
     }
 
     p {
+      max-width: 25ch;
       margin: 0.5em 0 0;
       color: var(--text-subtle);
-      max-width: 25ch;
     }
 
     h1 {
